Inclusão de novas musicas

--- a/playlist.html
+++ b/playlist.html
@@ -253,6 +253,28 @@
           <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
             <div class="poca-music-thumbnail">
                 <!-- video wrapper -->
+                <div class="youtube_img" data-embed="hCVRYamLhHk"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Alfa e Ômega</h4>
+              <h5>Marine Friesen</h5>
+              <div class="music-meta-data">
+                <p><a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
+                  <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="marine-friesen/alfa-e-mega/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-4 single_gallery_item letra_A wow fadeInUp" data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
                 <div class="youtube_img" data-embed="9E57yrHjymw"> 
                   <!-- "play" button -->
                   <div class="play-button"></div> 
@@ -273,6 +295,28 @@
         <!--                         LETRA C                           -->
         <!--------------------------------------------------------------->
         
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-4 single_gallery_item letra_C wow fadeInUp" data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
+                <div class="youtube_img" data-embed="GrL3DlrKAjI"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Cadeias Quebrar</h4>
+              <h5>Soraya Moraes</h5>
+              <div class="music-meta-data">
+                <p><a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
+                  <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="soraya-moraes/cadeias-quebrar/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
         <!-- Single gallery Item -->
         <div class="col-12 col-md-4 single_gallery_item letra_C wow fadeInUp" data-wow-delay="0.2s">
           <!-- Welcome Music Area -->
@@ -1057,6 +1101,28 @@
           </div>
         </div>
 
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-4 single_gallery_item letra_O fadeInUp" data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
+                <div class="youtube_img" data-embed="mTPgy4VuXyo"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Oh quão lindo esse nome é</h4>
+              <h5>Ana Nóbrega</h5>
+              <div class="music-meta-data">
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
+                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="ana-nobrega/oh-quao-lindo-esse-nome-/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
         <!--------------------------------------------------------------->
         <!--                         LETRA P                           -->
         <!--------------------------------------------------------------->
@@ -1244,6 +1310,28 @@
               <div class="music-meta-data">
                 <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: D</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="laura-souguellis/santo-espirito/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-4 single_gallery_item letra_S fadeInUp" data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
+                <div class="youtube_img" data-embed="NEuLT6kg2QA"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Só Quero Ver Você</h4>
+              <h5>Laura Souguellis & Rodolfo</h5>
+              <div class="music-meta-data">
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
+                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="laura-souguellis/so-quero-ver-voce/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
           </div>
