--- a/playlist.html
+++ b/playlist.html
@@ -376,7 +376,7 @@
               <h4>Céu e Terra se Encontram</h4>
               <h5>Davi Fernandes Cultura do Céu</h5>
               <div class="music-meta-data">
-                <p><a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: </a> <span style="font-size:17px;">|</span> 
+                <p><a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: B</a> <span style="font-size:17px;">|</span> 
                   <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="davi-fernandes/ceu-e-terra-se-encontram/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
@@ -1490,6 +1490,28 @@
               <div class="music-meta-data">
                 <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: G</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="antonio-cirilo/tu-es-adorado/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_T fadeInUp" data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
+                <div class="youtube_img" data-embed="QdqxjIxlbm0"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Tua Alegria</h4>
+              <h5>Isadora Pompeo e Rebeca C.</h5>
+              <div class="music-meta-data">
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: E</a> <span style="font-size:17px;">|</span> 
+                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="isadora-pompeo/tua-alegria--a-minha-forca/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
           </div>
