--- a/playlist.html
+++ b/playlist.html
@@ -127,6 +127,7 @@
             <button class="btn" data-filter=".letra_R">R</button>
             <button class="btn" data-filter=".letra_S">S</button>
             <button class="btn" data-filter=".letra_T">T</button>
+            <button class="btn" data-filter=".letra_V">V</button>
           </div>
         </div>
       </div>
@@ -194,7 +195,7 @@
             </div>
             <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>A Casa É Sua</h4>
-              <h5>Julliany Souza + Léo Brandão</h5>
+              <h5>Julliany Souza Léo B.</h5>
               <div class="music-meta-data">
                 <p><a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: G</a> <span style="font-size:17px;">|</span> 
                   <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="julliany-souza/a-casa-e-sua/" style="font-size: 17px; font-style: bold;">Cifra</a> 
@@ -237,7 +238,7 @@
               </div>
             </div>
             <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
-              <h4>Abra os Olhos do Coração</h4>
+              <h4>Abra Olhos do Coração</h4>
               <h5>David Quinlan</h5>
               <div class="music-meta-data">
                 <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: E</a> <span style="font-size:17px;">|</span> 
@@ -374,7 +375,7 @@
             </div>
             <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Céu e Terra se Encontram</h4>
-              <h5>Davi Fernandes Cultura do Céu</h5>
+              <h5>Davi Fernandes</h5>
               <div class="music-meta-data">
                 <p><a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: B</a> <span style="font-size:17px;">|</span> 
                   <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="davi-fernandes/ceu-e-terra-se-encontram/" style="font-size: 17px; font-style: bold;">Cifra</a> 
@@ -396,7 +397,7 @@
             </div>
             <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Céus abertos</h4>
-              <h5>Lucas Rosa feat. Leticia Rosa</h5>
+              <h5>Lucas Rosa Leticia Rosa</h5>
               <div class="music-meta-data">
                 <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: F</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="hillsong-brasil/ceus-abertos/" style="font-size: 17px; font-style: bold;">Cifra</a> 
@@ -749,6 +750,28 @@
           <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
             <div class="poca-music-thumbnail">
                 <!-- video wrapper -->
+                <div class="youtube_img" data-embed="HWVuBlxj0Fg"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Eu me Rendo</h4>
+              <h5>Renascer Praise</h5>
+              <div class="music-meta-data">
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span>
+                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="renascer-praise/eu-me-rendo/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_E fadeInUp" data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
                 <div class="youtube_img" data-embed="nSvxVCdj_gU"> 
                   <!-- "play" button -->
                   <div class="play-button"></div> 
@@ -758,7 +781,7 @@
               <h4>Eu Navegarei</h4>
               <h5>Gabriela Rocha</h5>
               <div class="music-meta-data">
-                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: A</a> <span style="font-size:17px;">|</span> 0
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: A</a> <span style="font-size:17px;">|</span>
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="gabriela-rocha/eu-navegarei/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
@@ -852,7 +875,7 @@
             </div>
             <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Grande é o Senhor</h4>
-              <h5>Adhemar Campos Nivea Soares</h5>
+              <h5>Nivea Soares</h5>
               <div class="music-meta-data">
                 <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: A</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="nivea-soares/grande--o-senhor/" style="font-size: 17px; font-style: bold;">Cifra</a> 
@@ -930,7 +953,7 @@
             </div>
             <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Maranata</h4>
-              <h5>Avivah Feat. Fernanda Madaloni</h5>
+              <h5>Avivah & Fernanda M.</h5>
               <div class="music-meta-data">
                 <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: </a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="ministerio-avivah/maranata/" style="font-size: 17px; font-style: bold;">Cifra</a> 
@@ -1044,7 +1067,7 @@
             </div>
             <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Nosso Deus</h4>
-              <h5>Revolução Music + Nívea Soares</h5>
+              <h5>Revolução & Nívea Soares</h5>
               <div class="music-meta-data">
                 <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: F</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="revolucao-oficial/nosso-deus/" style="font-size: 17px; font-style: bold;">Cifra</a> 
@@ -1140,6 +1163,28 @@
               <div class="music-meta-data">
                 <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="ana-nobrega/oh-quao-lindo-esse-nome-/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_O fadeInUp" data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
+                <div class="youtube_img" data-embed="TqvWhjB6exs"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>O Senhor é Bom</h4>
+              <h5>Nivea Soares</h5>
+              <div class="music-meta-data">
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
+                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="nivea-soares/o-senhor-e-bom/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
           </div>
@@ -1343,7 +1388,7 @@
           <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
             <div class="poca-music-thumbnail">
                 <!-- video wrapper -->
-                <div class="youtube_img" data-embed="NEuLT6kg2QA"> 
+                <div class="youtube_img" data-embed="7BoTTLK1K_4"> 
                   <!-- "play" button -->
                   <div class="play-button"></div> 
                 </div>
@@ -1534,6 +1579,32 @@
               <div class="music-meta-data">
                 <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: F</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="central-3/tudo-a-ver-com-ele/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!--------------------------------------------------------------->
+        <!--                         LETRA V                           -->
+        <!--------------------------------------------------------------->
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_V fadeInUp" data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
+                <div class="youtube_img" data-embed="nfM_o-DR_bo"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Vim Para Adorar-Te</h4>
+              <h5>Adoração e Adoradores</h5>
+              <div class="music-meta-data">
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
+                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="adoracao-e-adoradores/vim-para-adorar-te/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
           </div>
