--- a/playlist.html
+++ b/playlist.html
@@ -91,7 +91,7 @@
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="./index.html"><i class="fa fa-home"></i> Inicio</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Playlist</li>
+                <li class="breadcrumb-item active" aria-current="page">Playlist (64 Músicas)</li>
               </ol>
             </nav>
           </div>
@@ -107,10 +107,7 @@
       <div class="container">
         <div class="poca-projects-menu mb-30 wow fadeInUp" data-wow-delay="0.3s">
           <div class="text-center portfolio-menu">
-            <button class="btn active" data-filter="*">Todas - 64 Músicas</button>
-            <!-- <button class="btn" data-filter=".celebracao">Adoração</button>
-            <button class="btn" data-filter=".adoracao">Celebração</button> -->
-            <!-- <button class="btn active" data-filter="*">All</button> -->
+            <button class="btn active" data-filter="*">All</button>
             <button class="btn" data-filter=".letra_A">A</button>
             <button class="btn" data-filter=".letra_C">C</button>
             <button class="btn" data-filter=".letra_D">D</button>
