--- a/playlist.html
+++ b/playlist.html
@@ -163,6 +163,28 @@
           <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
             <div class="poca-music-thumbnail">
               <!-- video wrapper -->
+              <div class="youtube_img" data-embed="ANfpF0pNob4"> 
+                <!-- "play" button -->
+                <div class="play-button"></div> 
+              </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Aquieta Minh'alma</h4>
+              <h5>Ministério Zoe</h5>
+              <div class="music-meta-data">
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: E</a> <span style="font-size:17px;">|</span> 
+                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="ministerio-zoe/aquieta-minhalma/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_A">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+              <!-- video wrapper -->
               <div class="youtube_img" data-embed="Z8DtIQfhdJY"> 
                 <!-- "play" button -->
                 <div class="play-button"></div> 
