--- a/playlist.html
+++ b/playlist.html
@@ -141,6 +141,28 @@
           <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
             <div class="poca-music-thumbnail">
               <!-- video wrapper -->
+              <div class="youtube_img" data-embed="nBflm0gIKc0"> 
+                <!-- "play" button -->
+                <div class="play-button"></div> 
+              </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Abba</h4>
+              <h5>Laura Souguellis</h5>
+              <div class="music-meta-data lp_font">
+                  <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: C</a> <span style="font-size:17px;">|</span> 
+                      <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="laura-souguellis/abba/" style="font-size: 17px; font-style: bold;">Cifra</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_A">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+              <!-- video wrapper -->
               <div class="youtube_img" data-embed="Hf46N2YDs9E"> 
                 <!-- "play" button -->
                 <div class="play-button"></div> 
@@ -174,6 +196,28 @@
               <div class="music-meta-data">
                 <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: E</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="ministerio-zoe/aquieta-minhalma/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_A">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+              <!-- video wrapper -->
+              <div class="youtube_img" data-embed="WWrU6LC_4ho"> 
+                <!-- "play" button -->
+                <div class="play-button"></div> 
+              </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Atos 2</h4>
+              <h5>Gabriela Rocha</h5>
+              <div class="music-meta-data">
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: A</a> <span style="font-size:17px;">|</span> 
+                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="gabriela-rocha/atos-2/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
           </div>
