--- a/index.html
+++ b/index.html
@@ -74,14 +74,19 @@
   <!-- ***** Header Area End ***** -->
 
 <!-- ***** Breadcrumb Area Start ***** -->
-<div class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/1.jpg);">
-  <div class="container h-100">
-    <div class="row h-100 align-items-center">
+<!-- <div class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/1.jpg);"> -->
+<div class="breadcumb-area bg-img bg-overlay">
+  <!-- <div class="container h-100"> -->
+    <!-- <div class="row h-100 align-items-center"> -->
+    <div class="row h-100 align-items-center wrap">
+      <div class="bg-video">
+          <video autoplay loop src="./vid/louvor_28_05_2019.mp4"></video>
+      </div>
       <div class="col-12">
         <h2 class="title mt-70">Louvor Jovens 2º IEQ</h2>
       </div>
     </div>
-  </div>
+  <!-- </div> -->
 </div>
 <!-- ***** Breadcrumb Area End ***** -->
 
