--- a/playlist.html
+++ b/playlist.html
@@ -1064,6 +1064,28 @@
             </div>
           </div>
         </div>
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_M " data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
+                <div class="youtube_img" data-embed="ylkXqz3uJLg"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Milagre</h4>
+              <h5>Andre Valadão</h5>
+              <div class="music-meta-data">
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
+                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="andre-valadao/milagre/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
         
         <!-- Single gallery Item -->
         <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_M " data-wow-delay="0.2s">
