--- a/playlist.html
+++ b/playlist.html
@@ -114,6 +114,7 @@
             <button class="btn" data-filter=".letra_E">E</button>
             <button class="btn" data-filter=".letra_F">F</button>
             <button class="btn" data-filter=".letra_G">G</button>
+            <button class="btn" data-filter=".letra_I">I</button>
             <button class="btn" data-filter=".letra_J">J</button>
             <button class="btn" data-filter=".letra_L">L</button>
             <button class="btn" data-filter=".letra_M">M</button>
@@ -190,7 +191,7 @@
               <h4>Aquieta Minh'alma</h4>
               <h5>Ministério Zoe</h5>
               <div class="music-meta-data">
-                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: E</a> <span style="font-size:17px;">|</span> 
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: A</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="ministerio-zoe/aquieta-minhalma/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
@@ -324,6 +325,28 @@
               <div class="music-meta-data">
                 <p><a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
                   <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="marine-friesen/alfa-e-mega/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_A">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
+                <div class="youtube_img" data-embed="BYWXO9Kt5OA"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Aliança de Amor</h4>
+              <h5>Andre Valadão</h5>
+              <div class="music-meta-data">
+                <p><a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
+                  <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="andre-valadao/alianca-de-amor/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
           </div>
@@ -787,6 +810,28 @@
           <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
             <div class="poca-music-thumbnail">
                 <!-- video wrapper -->
+                <div class="youtube_img" data-embed="-42kiUbEOq8"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Estou Seguro</h4>
+              <h5>Gabriela Rocha</h5>
+              <div class="music-meta-data">
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: F</a> <span style="font-size:17px;">|</span> 
+                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="gabriela-rocha/estou-seguro/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_E " data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
                 <div class="youtube_img" data-embed="KHsw31C6F_0"> 
                   <!-- "play" button -->
                   <div class="play-button"></div> 
@@ -960,6 +1005,32 @@
               <div class="music-meta-data">
                 <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: A</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="nivea-soares/grande--o-senhor/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!--------------------------------------------------------------->
+        <!--                         LETRA I                           -->
+        <!--------------------------------------------------------------->
+        
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_I" data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
+                <div class="youtube_img" data-embed="s7jXASBWwwI"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>I Surrender</h4>
+              <h5>Hillsong Worship</h5>
+              <div class="music-meta-data">
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: B</a> <span style="font-size:17px;">|</span> 
+                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="hillsong-worship/i-surrender/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
           </div>
@@ -1406,6 +1477,28 @@
               <div class="music-meta-data">
                 <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: G</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="vineyard/quebrantado/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_Q " data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
+                <div class="youtube_img" data-embed="2CeP-CutFiM"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Quem Dizes Que Eu Sou</h4>
+              <h5>Hillsong</h5>
+              <div class="music-meta-data">
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: F#</a> <span style="font-size:17px;">|</span> 
+                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="hillsong-worship/eu-sou-quem-dizes-que-eu-sou/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
           </div>
@@ -1865,17 +1958,17 @@
 
   <!-- ******* All JS ******* -->
   <!-- jQuery js -->
-  <script src="js/jquery.min.js"></script>
+  <script defer src="js/jquery.min.js"></script>
   <!-- Popper js -->
-  <script src="js/popper.min.js"></script>
+  <script defer src="js/popper.min.js"></script>
   <!-- Bootstrap js -->
-  <script src="js/bootstrap.min.js"></script>
+  <script defer src="js/bootstrap.min.js"></script>
   <!-- All js -->
-  <script src="js/poca.bundle.js"></script>
+  <script defer src="js/poca.bundle.js"></script>
   <!-- Active js -->
-  <script src="js/default-assets/active.js"></script>
+  <script defer src="js/default-assets/active.js"></script>
   <!-- Style -->
-  <script src="style.js"></script>
+  <script defer src="style.js"></script>
 
 </body>
 
