--- a/index.html
+++ b/index.html
@@ -225,6 +225,15 @@
   <!-- Active js -->
   <script src="js/default-assets/active.js"></script>
 
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="/__/firebase/6.4.2/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#reserved-urls -->
+
+  <!-- Initialize Firebase -->
+  <script src="/__/firebase/init.js"></script>
+
 </body>
 
 </html>
