--- a/playlist.html
+++ b/playlist.html
@@ -345,7 +345,7 @@
               <h4>Aliança de Amor</h4>
               <h5>Andre Valadão</h5>
               <div class="music-meta-data">
-                <p><a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
+                <p><a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: F</a> <span style="font-size:17px;">|</span> 
                   <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="andre-valadao/alianca-de-amor/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
@@ -1488,6 +1488,28 @@
           <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
             <div class="poca-music-thumbnail">
                 <!-- video wrapper -->
+                <div class="youtube_img" data-embed="RXlDfjDg738"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Quebro meu vaso</h4>
+              <h5>André Aquino & Luma Elpidio</h5>
+              <div class="music-meta-data">
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: B</a> <span style="font-size:17px;">|</span> 
+                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="luma-elpidio/eu-quebro-o-meu-vaso/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_Q " data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
                 <div class="youtube_img" data-embed="2CeP-CutFiM"> 
                   <!-- "play" button -->
                   <div class="play-button"></div> 
@@ -1703,7 +1725,7 @@
               <h4>Só Quero Ver Você</h4>
               <h5>Laura Souguellis & Rodolfo</h5>
               <div class="music-meta-data">
-                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: C</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="laura-souguellis/so-quero-ver-voce/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
