--- a/playlist.html
+++ b/playlist.html
@@ -91,7 +91,7 @@
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="./index.html"><i class="fa fa-home"></i> Inicio</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Playlist - 78 Músicas</li>
+              <li class="breadcrumb-item active" aria-current="page">Playlist - 81 Músicas</li>
             </ol>
           </nav>
         </div>
@@ -131,6 +131,32 @@
       </div>
 
       <div class="row poca-portfolio">
+
+        <!--------------------------------------------------------------->
+        <!--                         LETRA A                           -->
+        <!--------------------------------------------------------------->
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_A">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+              <!-- video wrapper -->
+              <div class="youtube_img" data-embed="ldfw_BArCYg"> 
+                <!-- "play" button -->
+                <div class="play-button"></div> 
+              </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Aba</h4>
+              <h5>Kemuel, Ton Carfi</h5>
+              <div class="music-meta-data lp_font">
+                  <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
+                      <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="coral-kemuel/aba-part-ton-carfi/" style="font-size: 17px; font-style: bold;">Cifra</a>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <!-- Single gallery Item -->
         <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_A">
@@ -920,6 +946,28 @@
           <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
             <div class="poca-music-thumbnail">
                 <!-- video wrapper -->
+                <div class="youtube_img" data-embed="J_FcCyQQZ88"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Eu Navegarei</h4>
+              <h5>Shekinah Worship Sessions</h5>
+              <div class="music-meta-data">
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span>
+                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="gabriela-rocha/eu-navegarei/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_E " data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
                 <div class="youtube_img" data-embed="56Y3X6e11Ss"> 
                   <!-- "play" button -->
                   <div class="play-button"></div> 
@@ -1057,6 +1105,28 @@
               <div class="music-meta-data">
                 <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: F</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="heloisa-rosa/jesus-o-caminho/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_J " data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
+                <div class="youtube_img" data-embed="afMu6gwxXts"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Jesus Em Tua Presença</h4>
+              <h5>Felipe Henri | Morada</h5>
+              <div class="music-meta-data">
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
+                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="ministerio-de-louvor-iecvp/jesus-em-tua-presenca-reunimo-nos-aqui/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
           </div>
@@ -1769,7 +1839,7 @@
               <h4>Só Tu És Santo</h4>
               <h5>Morada</h5>
               <div class="music-meta-data">
-                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: G</a> <span style="font-size:17px;">|</span> 
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: A</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="ministerio-morada/so-tu-s-santo/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
