--- a/playlist.html
+++ b/playlist.html
@@ -419,7 +419,7 @@
               <h4>Cadeias Quebrar</h4>
               <h5>Soraya Moraes</h5>
               <div class="music-meta-data">
-                <p><a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
+                <p><a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: D</a> <span style="font-size:17px;">|</span> 
                   <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="soraya-moraes/cadeias-quebrar/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
@@ -1125,7 +1125,7 @@
               <h4>Jesus Em Tua Presença</h4>
               <h5>Felipe Henri | Morada</h5>
               <div class="music-meta-data">
-                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: E</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="ministerio-de-louvor-iecvp/jesus-em-tua-presenca-reunimo-nos-aqui/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
@@ -1427,7 +1427,7 @@
               <h4>Oh quão lindo esse nome é</h4>
               <h5>Ana Nóbrega</h5>
               <div class="music-meta-data">
-                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: D</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="ana-nobrega/oh-quao-lindo-esse-nome-/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
