--- a/playlist.html
+++ b/playlist.html
@@ -757,7 +757,7 @@
               <h4>Em Tua Presença</h4>
               <h5>Nívea Soares</h5>
               <div class="music-meta-data">
-                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: D</a> <span style="font-size:17px;">|</span> 
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: D</a> <span style="font-size:17px;">G</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="nivea-soares/em-tua-presenca/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
@@ -1243,7 +1243,7 @@
               <h4>Muralhas</h4>
               <h5>Andre Valadão</h5>
               <div class="music-meta-data">
-                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: A</a> <span style="font-size:17px;">|</span> 
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: A</a> <span style="font-size:17px;">E</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="andre-valadao/muralhas/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
@@ -1979,7 +1979,7 @@
               <h4>Vim Para Adorar-Te</h4>
               <h5>Adoração e Adoradores</h5>
               <div class="music-meta-data">
-                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">E</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="adoracao-e-adoradores/vim-para-adorar-te/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
