--- a/playlist.html
+++ b/playlist.html
@@ -669,7 +669,7 @@
               <h4>Eu Vou Construir</h4>
               <h5>Juliano Son</h5>
               <div class="music-meta-data">
-                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: -</a> <span style="font-size:17px;">|</span> 
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: A</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="livres-para-adorar/eu-vou-construir/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
