--- a/playlist.html
+++ b/playlist.html
@@ -897,6 +897,28 @@
         </div>
 
         <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_I" data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
+                <div class="youtube_img" data-embed="gFS2qVMtD6g"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4>Eu me rendo (I Surrender)</h4>
+              <h5>Ministério Mergulhar</h5>
+              <div class="music-meta-data">
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: F</a> <span style="font-size:17px;">|</span> 
+                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="ministerio-mergulhar/eu-me-rendo/letra/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single gallery Item -->
         <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_E " data-wow-delay="0.2s">
           <!-- Welcome Music Area -->
           <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
@@ -1053,32 +1075,6 @@
               <div class="music-meta-data">
                 <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: A</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="nivea-soares/grande--o-senhor/" style="font-size: 17px; font-style: bold;">Cifra</a> 
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!--------------------------------------------------------------->
-        <!--                         LETRA I                           -->
-        <!--------------------------------------------------------------->
-        
-        <!-- Single gallery Item -->
-        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_I" data-wow-delay="0.2s">
-          <!-- Welcome Music Area -->
-          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
-            <div class="poca-music-thumbnail">
-                <!-- video wrapper -->
-                <div class="youtube_img" data-embed="s7jXASBWwwI"> 
-                  <!-- "play" button -->
-                  <div class="play-button"></div> 
-                </div>
-            </div>
-            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
-              <h4>I Surrender</h4>
-              <h5>Hillsong Worship</h5>
-              <div class="music-meta-data">
-                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: B</a> <span style="font-size:17px;">|</span> 
-                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="hillsong-worship/i-surrender/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
           </div>
@@ -1933,6 +1929,28 @@
               <div class="music-meta-data">
                 <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: E</a> <span style="font-size:17px;">|</span> 
                     <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="isadora-pompeo/tua-alegria--a-minha-forca/" style="font-size: 17px; font-style: bold;">Cifra</a> 
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 col-lg-4 single_gallery_item letra_T " data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+                <!-- video wrapper -->
+                <div class="youtube_img" data-embed="teKTKiMinGM"> 
+                  <!-- "play" button -->
+                  <div class="play-button"></div> 
+                </div>
+            </div>
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
+              <h4></h4>
+              <h5>Isadora Pompeo e Rebeca C.</h5>
+              <div class="music-meta-data">
+                <p> <a class="music-author" style="cursor:pointer; font-size: 17px; font-style: bold;">Tom: C</a> <span style="font-size:17px;">|</span> 
+                    <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="paulo-cesar-baruk/tua-palavra-your-words/" style="font-size: 17px; font-style: bold;">Cifra</a> 
               </div>
             </div>
           </div>
